--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<meta name="description" content="Your favorite character counter! Count the number of words, sentences, and paragraphs in your text.">
 	<meta name="author" content="John Goodliff">
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136445575-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-136445575-1');
+	</script>
+
 	<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
