Fixed incorrect url in sitemap. Changed theme name

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<input type="radio" name="theme" id="blacktheme" value="Black" checked>Black<br>
 			<input type="radio" name="theme" id="whitetheme" value="White">White<br>
 			<input type="radio" name="theme" id="tealtheme" value="Teal">Teal<br>
-			<input type="radio" name="theme" id="nightskytheme" value="Night Sky">Night Sky<br>
+			<input type="radio" name="theme" id="dusktheme" value="Dusk Sky">Night Sky<br>
 		</section>
 		<strong>Info</strong>
 		<p>
