Added share label. Updated description. Changed page title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
-	<title>Tally - Word Counter</title>
-	<meta name="description" content="Your favorite character counter! Count the number of words, sentences, and paragraphs in your text.">
+	<title>Tally Word Counter</title>
+	<meta name="description" content="Your favorite character counter, with a dark mode! Count the number of words, sentences, and paragraphs in your text instantly.">
 	<meta name="author" content="John Goodliff">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -46,8 +46,11 @@
 			<h1>Tally</h1>
 		</header>
 		<p>
-			Your favorite character counter!<br>
-			Count the number of words, sentences, and paragraphs in your text instantly.
+			Your favorite character counter, with a dark mode!<br><br>
+
+			Tally word counter is a free online tool to count the number of characters, words, and paragraphs in your text. Tally can also count the number of digits, spaces, and special characters. Make sure you have the required number of words for your essay or article by counting them instantly.<br><br>
+
+			Also, Tally character counter has other themes in the settings, so check them out if you want a different look. Please bookmark this page to count use Tally whenever you need.
 		</p>
 		<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown fox jumps over the lazy dog..." autofocus></textarea>
 		<div class="table">
@@ -71,6 +74,7 @@
 		<p>
 			Please note that although this calculator was designed to be as accurate as possible, it may not be perfect. No promises!
 		</p>
+		<p class="sharelabel"><b>Share</b><br><i class="fas fa-arrow-down"></i></p>
 		<footer>
 			<a href="https://github.com/jerboa88/Tally"><b>GitHub</b></a>
 			<div class="social">
