Fixed typo in description. Made textarea taller

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 			Tally word counter is a free online tool to count the number of characters, words, and paragraphs in your text. Tally can also count the number of digits, spaces, and special characters. Make sure you have the required number of words for your essay or article by counting them instantly.<br><br>
 
-			Also, Tally character counter has other themes in the settings, so check them out if you want a different look. Please bookmark this page to count use Tally whenever you need.
+			Also, Tally character counter has other themes in the settings, so check them out if you want a different look. Please bookmark this page to  use Tally whenever you need.
 		</p>
 		<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown fox jumps over the lazy dog..." autofocus></textarea>
 		<div class="table">
