--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<meta name="msapplication-navbutton-color" content="#151515">
 	<meta name="msapplication-TileColor" content="#151515">
 	<meta name="theme-color" content="#151515">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 
 <body>
