Added information about Chrome extension. Compressed images

--- a/index.html
+++ b/index.html
@@ -123,9 +123,18 @@
 		<p>
 			Thanks for using the site! This project is licensed under the <a href="https://github.com/jerboa88/Tally/blob/gh-pages/LICENSE" rel="license"><strong>MIT license</strong></a>.
 		</p>
+
 		<p>
 			Icons were provided by <a href="https://github.com/FortAwesome/Font-Awesome" rel="link"><strong>Font Awesome</strong></a> under the CC BY 4.0 License, SIL OFL 1.1 License, and MIT Licenses and packaged using <a href="https://icomoon.io/#docs" rel="link"><strong>IcoMoon</strong></a>. Please see <a href="https://github.com/jerboa88/Tally/tree/gh-pages/fonts/LICENSE.txt" rel="link"><strong>the license</strong></a> for more details.
 		</p>
+
+		<strong>Extension</strong>
+		<p>
+			A Chrome extension is also available for even easier counting. Simply select any text, right click, and click count.
+		</p>
+		<a href="https://chrome.google.com/webstore/detail/tally-word-counter/eggkmbghbmjmbdjloifaklghfiecjbnk" target="_blank" class="badge">
+			<img src="webstorebadge.png" alt="Tally on the Chrome Web Store">
+		</a>
 		<section class="padding"></section>
 	</div>
 	<script src="./script.js"></script>
