Added link to Tally Extenson in README. Increased sidebar width. Improved theme selection UI. Added color transitions for links. Added vendor prefixes for greater compatibility

--- a/index.html
+++ b/index.html
@@ -113,11 +113,23 @@
 			<label for="maxchars">Allow more than 1,000,000 characters</label>
 		</section>
 		<strong>Theme</strong>
-		<section>
-			<input type="radio" name="theme" id="blacktheme" value="Black" checked>Black<br>
-			<input type="radio" name="theme" id="whitetheme" value="White">White<br>
-			<input type="radio" name="theme" id="tealtheme" value="Teal">Teal<br>
-			<input type="radio" name="theme" id="dusktheme" value="Dusk">Dusk<br>
+		<section class="themes">
+			<p>
+				<input type="radio" name="theme" id="blacktheme" value="Black" checked>
+				<label for="blacktheme">Black</label>
+			</p>
+			<p>
+				<input type="radio" name="theme" id="whitetheme" value="White">
+				<label for="whitetheme">White</label>
+			</p>
+			<p>
+				<input type="radio" name="theme" id="tealtheme" value="Teal">
+				<label for="tealtheme">Teal</label>
+			</p>
+			<p>
+				<input type="radio" name="theme" id="dusktheme" value="Dusk">
+				<label for="dusktheme">Dusk</label>
+			</p>
 		</section>
 		<strong>Info</strong>
 		<p>
