Added automatic dark/light mode. Updated homepage url. Added class to stop body from scrolling when sidebar is open

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			"@context": "http://schema.org",
 			"@type": "Person",
 			"name": "John Goodliff",
-			"url": "https://jerboa88.github.io"
+			"url": "https://johng.io"
 		}
 	</script>
 
@@ -96,7 +96,7 @@
 				<a href="http://twitter.com/share?url=http%3A%2F%2Fjerboa88.github.io%2FTally%2F&hashtags=charactercounter%2Cwordcounter&text=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A"><i class="fas fa-twitter-square"></i></a>
 				<a href="mailto:someone@yoursite.com&subject=Tally%20-%20Word%20Counter&body=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A"><i class="fas fa-envelope-square"></i></a>
 			</div>
-			<a href="https://jerboa88.github.io" rel="author"><b>Made by John Goodliff</b></a>
+			<a href="https://johng.io" rel="author"><b>Made by John Goodliff</b></a>
 		</footer>
 	</div>
 
@@ -114,6 +114,10 @@
 		</section>
 		<strong>Theme</strong>
 		<section class="themes">
+			<p>
+				<input type="radio" name="theme" id="autotheme" value="Auto" checked>
+				<label for="autotheme">Auto</label>
+			</p>
 			<p>
 				<input type="radio" name="theme" id="blacktheme" value="Black" checked>
 				<label for="blacktheme">Black</label>
