Minor formatting changes for index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
 	<title>Tally Word Counter</title>
 	<meta name="description" content="Your favorite character counter, with a dark mode! Count the number of words, sentences, and paragraphs in your text instantly.">
 	<meta name="author" content="John Goodliff">
@@ -11,7 +12,7 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136445575-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
 		gtag('config', 'UA-136445575-1');
@@ -19,7 +20,7 @@
 
 		function gtag_report_conversion(url) {
 			var callback = function () {
-				if (typeof(url) != 'undefined') {
+				if (typeof (url) != 'undefined') {
 					window.location = url;
 				}
 			};
@@ -62,9 +63,9 @@
 		<p>
 			Your favorite character counter, with a dark mode!<br><br>
 
-			Tally word counter is a free online tool to count the number of characters, words, and paragraphs in your text. Tally can also count the number of digits, spaces, and special characters. Make sure you have the required number of words for your essay or article by counting them instantly.<br><br>
+			Tally Word Counter is a free online tool to count the number of characters, words, and paragraphs in your text. Tally can also count the number of digits, spaces, and special characters. Make sure you have the required number of words for your essay or article by counting them instantly.<br><br>
 
-			Also, Tally character counter has other themes in the settings, so check them out if you want a different look. Please bookmark this page to  use Tally whenever you need.
+			Also, Tally character counter has other themes in the settings, so check them out if you want a different look. Please bookmark this page to use Tally whenever you need.
 		</p>
 		<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown fox jumps over the lazy dog..." autofocus></textarea>
 		<div class="table">
@@ -92,9 +93,15 @@
 		<footer>
 			<a href="https://github.com/jerboa88/Tally"><b>GitHub</b></a>
 			<div class="social">
-				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fjerboa88.github.io%2FTally%2F"><i class="fas fa-facebook-square"></i></a>
-				<a href="http://twitter.com/share?url=http%3A%2F%2Fjerboa88.github.io%2FTally%2F&hashtags=charactercounter%2Cwordcounter&text=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A"><i class="fas fa-twitter-square"></i></a>
-				<a href="mailto:someone@yoursite.com&subject=Tally%20-%20Word%20Counter&body=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A"><i class="fas fa-envelope-square"></i></a>
+				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fjerboa88.github.io%2FTally%2F">
+					<i class="fas fa-facebook-square"></i>
+				</a>
+				<a href="http://twitter.com/share?url=http%3A%2F%2Fjerboa88.github.io%2FTally%2F&hashtags=charactercounter%2Cwordcounter&text=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A">
+					<i class="fas fa-twitter-square"></i>
+				</a>
+				<a href="mailto:someone@example.com&subject=Tally%20-%20Word%20Counter&body=Tally%20-%20Your%20favorite%20character%20counter%21%20%20Count%20the%20number%20of%20words%2C%20sentences%2C%20and%20paragraphs%20in%20your%20text%3A">
+					<i class="fas fa-envelope-square"></i>
+				</a>
 			</div>
 			<a href="https://johng.io" rel="author"><b>Made by John Goodliff</b></a>
 		</footer>
@@ -155,4 +162,5 @@
 	</div>
 	<script src="./script.js"></script>
 </body>
+
 </html>
