Refactor script. Add debouncing to count function

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<output id="spaces">-</output>
 			<output id="letters">-</output>
 			<output id="digits">-</output>
-			<output id="specialcharacters">-</output>
+			<output id="specialCharacters">-</output>
 		</div>
 		<p>
 			Please note that although this calculator was designed to be as accurate as possible, it may not be perfect. No promises!
@@ -136,7 +136,11 @@
 		</a>
 		<section class="padding"></section>
 	</div>
-	<script src="./script.js"></script>
+
+	<script src="./scripts/utils.js" type="module"></script>
+	<script src="./scripts/cookies.js" type="module"></script>
+	<script src="./scripts/counter.js" type="module"></script>
+	<script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
