Update URLs in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
 	<title>Tally Word Counter</title>
-	<meta name="description" content="Your favorite character counter, with a dark mode! Count the number of words, sentences, and paragraphs in your text instantly.">
+	<meta name="description" content="Your favorite character counter, now with a dark mode! Count the number of words, sentences, and paragraphs in your text instantly.">
 	<meta name="author" content="John Goodliff">
 
 	<script type="application/ld+json">
@@ -17,14 +17,15 @@
 		}
 	</script>
 
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./assets/styles/index.css">
+	<!-- TODO: Replace with local fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto+Slab">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#151515">
+	<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+	<link rel="mask-icon" href="./assets/images/safari-pinned-tab.svg" color="#151515">
+	<link rel="manifest" href="./assets/site.webmanifest">
 	<meta name="msapplication-navbutton-color" content="#151515">
 	<meta name="msapplication-TileColor" content="#151515">
 	<meta name="theme-color" content="#151515">
@@ -137,9 +138,6 @@
 		<section class="padding"></section>
 	</div>
 
-	<script src="./scripts/utils.js" type="module"></script>
-	<script src="./scripts/cookies.js" type="module"></script>
-	<script src="./scripts/counter.js" type="module"></script>
 	<script src="./scripts/index.js" type="module"></script>
 </body>
 
