Update disclaimer on index page

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 			<output id="specialCharacters">-</output>
 		</div>
 		<p>
-			Please note that although this calculator was designed to be as accurate as possible, it may not be perfect. No promises!
+			Please note that this calculator was designed for use with English text, so your mileage may vary with other languages. No promises!
 		</p>
 		<p class="sharelabel">
 			<b>Share</b>
