Rename special characters to symbols

--- a/src/index.html
+++ b/src/index.html
@@ -55,11 +55,11 @@
 			<h5>Spaces</h5>
 			<h5>Letters</h5>
 			<h5>Digits</h5>
-			<h5>Special Characters</h5>
+			<h5>Symbols</h5>
 			<output id="spaces">-</output>
 			<output id="letters">-</output>
 			<output id="digits">-</output>
-			<output id="specialCharacters">-</output>
+			<output id="symbols">-</output>
 		</div>
 		<p>
 			Note that this calculator was designed for use with English text. It may work for other languages, but I cannot guarantee that the results will be accurate.
