Add support for line counts

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,12 @@
 			<h5>Words</h5>
 			<h5>Sentences</h5>
 			<h5>Paragraphs</h5>
+			<h5>Lines</h5>
 			<output id="characters">-</output>
 			<output id="words">-</output>
 			<output id="sentences">-</output>
 			<output id="paragraphs">-</output>
+			<output id="lines">-</output>
 			<h5>Spaces</h5>
 			<h5>Letters</h5>
 			<h5>Digits</h5>
