--- a/src/index.html
+++ b/src/index.html
@@ -43,26 +43,46 @@
 			Tally has other themes available in the settings, so check them out if you want a different look. Please bookmark this page to use Tally whenever you need.
 		</p>
 		<textarea id="input" spellcheck="false" maxlength="1000000" placeholder="The quick brown fox jumps over the lazy dog..." autofocus></textarea>
-		<div class="table">
-			<h5>Characters</h5>
-			<h5>Words</h5>
-			<h5>Sentences</h5>
-			<h5>Paragraphs</h5>
-			<h5>Lines</h5>
-			<output id="characters">-</output>
-			<output id="words">-</output>
-			<output id="sentences">-</output>
-			<output id="paragraphs">-</output>
-			<output id="lines">-</output>
-			<h5>Spaces</h5>
-			<h5>Letters</h5>
-			<h5>Digits</h5>
-			<h5>Symbols</h5>
-			<output id="spaces">-</output>
-			<output id="letters">-</output>
-			<output id="digits">-</output>
-			<output id="symbols">-</output>
-		</div>
+		<form class="table counts">
+			<div>
+				<h5>Characters</h5>
+				<output id="characters" for="input">-</output>
+			</div>
+			<div>
+				<h5>Words</h5>
+				<output id="words" for="input">-</output>
+			</div>
+			<div>
+				<h5>Sentences</h5>
+				<output id="sentences" for="input">-</output>
+			</div>
+			<div>
+				<h5>Paragraphs</h5>
+				<output id="paragraphs" for="input">-</output>
+			</div>
+			<div>
+				<h5>Lines</h5>
+				<output id="lines" for="input">-</output>
+			</div>
+		</form>
+		<form class="table stats">
+			<div>
+				<h5>Spaces</h5>
+				<output id="spaces" for="input">-</output>
+			</div>
+			<div>
+				<h5>Letters</h5>
+				<output id="letters" for="input">-</output>
+			</div>
+			<div>
+				<h5>Digits</h5>
+				<output id="digits" for="input">-</output>
+			</div>
+			<div>
+				<h5>Symbols</h5>
+				<output id="symbols" for="input">-</output>
+			</div>
+		</form>
 		<p>
 			Note that this calculator was designed for use with English text. It may work for other languages, but I cannot guarantee that the results will be accurate.
 		</p>
