Add privacy notice to footer

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,24 @@
 				</p>
 			</div>
 			<div>
+				<h3>Privacy</h3>
+				<p>
+					All text processing is performed locally on your own device and is never sent to a server.
+				</p>
+				<br>
+				<p>
+					If you select a new theme or change any options, local storage will be used to store your settings locally. If you select the "Remember input text" option, your input text will also be saved between page visits. You can uncheck this option at any time to clear the saved input text. You can also wipe the saved data for this site in your browser's settings.
+				</p>
+				<br>
+				<p>
+					This site does not collect personal analytics. However, basic visitor information such as IP addresses may be passively collected by our DNS provider (Cloudflare) for security and performance purposes. This data is not used for tracking or marketing.
+				</p>
+				<br>
+				<p>
+					By using this site to agree to these terms.
+				</p>
+			</div>
+			<div>
 				<h3>Options</h3>
 				<div>
 					<input type="checkbox" id="savesettings">
